--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,6 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
@@ -26,6 +25,7 @@
         android:padding="16dp"
         android:textSize="20sp"
         android:text=""
+        android:id="@+id/tv_toy_names"
         />
 
 </FrameLayout>
